# katika-web

./: .gitignore  .gitlab-ci.yml  Backend REadme.md  CHANGELOG.md  Frontend.md  LICENCE  MOBILE_DESIGN_SPEC.md  README.md  angular.json  cliff.toml  frontend-api-guide.md  ngsw-config.json  package.json  proxy.conf.local.json  proxy.conf.remote.json  tsconfig.json  vercel.json  worker.js  wrangler.jsonc  wrangler.toml
public/: manifest.webmanifest
public/i18n/: en.json  fr.json
src/: index.html  main.server.ts  main.ts  polyfills.server.ts  server.ts  styles.scss  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.config.server.ts  app.config.ts  app.html  app.routes.server.ts  app.routes.ts  app.scss  app.spec.ts  app.ts  models.ts
src/app/core/auth/: auth.guard.ts  auth.service.ts  auth.store.ts  role.guard.ts  staff-redirect.guard.ts
src/app/core/guards/: desktop.guard.ts
src/app/core/http/: api.service.ts  auth.interceptor.ts  csrf.interceptor.ts  error.interceptor.ts  offline.interceptor.ts
src/app/core/notification/: toast.service.ts
src/app/core/platform/: platform.service.ts  tauri.service.ts
src/app/core/websocket/: stomp.service.ts
src/app/features/admin/: admin.queries.ts  admin.routes.ts  admin.service.ts
src/app/features/auth/: auth.routes.ts
src/app/features/dashboard/: dashboard.component.ts
src/app/features/disputes/: dispute.queries.ts  dispute.service.ts  disputes.routes.ts
src/environments/: environment.prod.ts  environment.ts
(+64 files in other folders)
