[package]
name = "katica"
version = "1.0.0"
description = "Katica — Payment & Escrow Platform"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "katica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
